# copilot-gemini-agent

./: .env.example  .gitignore  CHANGELOG.md  DEMO.md  DEMO_M2.md  LICENSE  PR_M2.md  PR_M3.md  PR_M4.md  README.md  config.example.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: pull_request_template.md
.github/workflows/: ci.yml
captures/: capture_20251226_112154.json  capture_20251226_112154.txt
scripts/: demo_perception.py  demo_reviewer.py  install.bat  install_tesseract.ps1  install_windows.ps1  sample_calibration.json  validate_m2_windows.bat  validate_m2_windows.ps1  validate_m6.ps1
src/copilot_agent/: __init__.py  __main__.py  checkpoint.py  cli.py  config.py  desync.py  logging.py  metrics.py  orchestrator.py  resilience.py  state.py  tui.py
src/copilot_agent/actuator/: __init__.py  actions.py  calibration.py  pipeline.py  platform.py  screenshot.py  window.py
src/copilot_agent/perception/: __init__.py  ocr.py  pipeline.py  preprocessing.py  screenshot.py  template.py  vision.py
src/copilot_agent/reviewer/: __init__.py  gemini.py
src/copilot_agent/safety/: __init__.py  killswitch.py
tests/: conftest.py
tests/unit/: test_actions.py  test_actuator.py  test_checkpoint.py  test_config.py  test_desync.py  test_gemini_parser.py  test_killswitch.py  test_metrics.py  test_orchestrator.py  test_perception.py  test_resilience.py  test_reviewer.py  test_state.py
